--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -11,36 +12,42 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
     <h1 class = 'text-center'>Calculator using HTML, CSS, & JavaScript</h1>
     <div class="container flex flex-col  mx-auto items-center">
         <div class="row">
             <input type="text" class="input">
-        </div>          
-        <div class="row">
-                <button class="button">7</button>
-                <button class="button">8</button>
-                <button class="button">9</button>
-                <button class="button">X</button>
         </div>
         <div class="row">
-                <button class="button">4</button>
-                <button class="button">5</button>
-                <button class="button">6</button>
-                <button class="button">/</button>
+            <button class="button">AC</button>
+            <button class="button">C</button>
+            <button class="button">.</button>
+            <button class="button">/</button>
+        </div>     
+        <div class="row">
+            <button class="button">7</button>
+            <button class="button">8</button>
+            <button class="button">9</button>
+            <button class="button">*</button>
         </div>
         <div class="row">
-                <button class="button">1</button>
-                <button class="button">2</button>
-                <button class="button">3</button>
-                <button class="button">+</button>
+            <button class="button">4</button>
+            <button class="button">5</button>
+            <button class="button">6</button>
+            <button class="button">-</button>
+            </div>
+        <div class="row">
+            <button class="button">1</button>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button">+</button>
         </div>
         <div class="row">
+            <button class="button">(</button>
+            <button class="button">)</button>
                 <button class="button">0</button>
-                <button class="button">.</button>
                 <button class="button">=</button>
-                <button class="button">-</button>
-        </div>
+            </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
